GitHub sample controllers

--- a/SwipeTabBarController/Resources/Base.lproj/Main.storyboard
+++ b/SwipeTabBarController/Resources/Base.lproj/Main.storyboard
@@ -139,9 +139,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="q48-0P-f69"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="GithubUsersVC"/>
                                 <connections>
-                                    <action selector="openCommitsVC" destination="cU4-b9-iRH" eventType="touchUpInside" id="z8m-od-0N8"/>
+                                    <action selector="openGithubUsersVC" destination="cU4-b9-iRH" eventType="touchUpInside" id="fih-Bf-Sd8"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Hw8-Wx-0SN">
@@ -184,38 +184,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6aN-3e-G42" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2126" y="138"/>
-        </scene>
-        <!--Github CommitVC-->
-        <scene sceneID="IJk-wZ-1Rq">
-            <objects>
-                <viewController storyboardIdentifier="GithubCommitVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lPe-d1-3wX" customClass="GithubCommitVC" customModule="SwipeTabBarController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="RY7-ld-ToY">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HjT-xi-WC6">
-                                <rect key="frame" x="20" y="438" width="374" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="8HW-in-2MQ" firstAttribute="trailing" secondItem="HjT-xi-WC6" secondAttribute="trailing" constant="20" id="I7r-IT-RfV"/>
-                            <constraint firstItem="HjT-xi-WC6" firstAttribute="centerX" secondItem="RY7-ld-ToY" secondAttribute="centerX" id="L2C-h5-lXh"/>
-                            <constraint firstItem="HjT-xi-WC6" firstAttribute="centerY" secondItem="RY7-ld-ToY" secondAttribute="centerY" id="chI-ft-Rwb"/>
-                            <constraint firstItem="HjT-xi-WC6" firstAttribute="leading" secondItem="8HW-in-2MQ" secondAttribute="leading" constant="20" id="yMP-28-rnx"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="8HW-in-2MQ"/>
-                    </view>
-                    <connections>
-                        <outlet property="detailLabel" destination="HjT-xi-WC6" id="fHh-tl-cdw"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qtz-g4-bjY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2935" y="138"/>
         </scene>
         <!--View Controller3-->
         <scene sceneID="Bct-Wg-n8w">
